cleaned up repo

--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8d64b0f",
+   "id": "58490600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6f0496e",
+   "id": "bdc261eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e4a43c",
+   "id": "dcf735c3",
    "metadata": {},
    "source": [
     "# Create the machine learning model\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "54d639c7",
+   "id": "db6a811e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a9290a3f",
+   "id": "c92e4b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4df5ccf3",
+   "id": "943232db",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5d1ef7f",
+   "id": "ffa96b78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fe5e0cfb",
+   "id": "51046f3d",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d2528c0e",
+   "id": "7cb924a1",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "60093765",
+   "id": "24d13709",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c98fd99c",
+   "id": "a33dad41",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "78c3cb52",
+   "id": "34b73701",
    "metadata": {},
    "outputs": [
     {
@@ -309,16 +309,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b96796f2",
+   "execution_count": 14,
+   "id": "87dd91d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes are either 0 (purple) or 1 (yellow)\n",
+      "The new point was classified as: [0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# pass the 'new_data' into the predict method of the classifier model that was inst\n",
+    "# pass the 'new_data' into the predict method of the classifier model that was instantiated earlier\n",
     "predictions = classifier.predict(new_data)\n",
     "print(\"Classes are either 0 (purple) or 1 (yellow)\")\n",
     "print(f\"The new point was classified as: {predictions}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2486d3c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
