--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3642093b",
+   "id": "d20fc299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0d8425e9",
+   "id": "07fe0b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604aa476",
+   "id": "bc9a7f24",
    "metadata": {},
    "source": [
     "# Create the machine learning model\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8ef3cf11",
+   "id": "15e08189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8272c80",
+   "id": "e54285a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d4e31e59",
+   "id": "f0e96769",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "50f05fad",
+   "id": "d5b10279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b2683fdc",
+   "id": "16150b26",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "530d60c2",
+   "id": "0a988fff",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "61983748",
+   "id": "2a49ae2e",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d3fba5db",
+   "id": "42acb4d0",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c995bf2a",
+   "id": "a3de0aef",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a5d6163",
+   "id": "821798c7",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e639bef",
+   "id": "aa99b586",
    "metadata": {},
    "source": [
     "# Pass in the merged_data_df to the ML Model\n",
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6228adc4",
+   "id": "12be4b5d",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ff33c590",
+   "id": "debe21fa",
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2836e0fd",
+   "id": "49a50ee1",
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1829,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e42a4c82",
+   "id": "77faf0cb",
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "543b8dd0",
+   "id": "007e3485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "40b111b5",
+   "id": "7fce8237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c6aa2f9e",
+   "id": "b5460904",
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "642dcb79",
+   "id": "d1ba53e8",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5e54f961",
+   "id": "40781ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e7f20fce",
+   "id": "3bec8834",
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1973,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e7ee209a",
+   "id": "22ae173f",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3de9f031",
+   "id": "db1e4688",
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486cd385",
+   "id": "6c0ded3f",
    "metadata": {},
    "source": [
     "# Random oversampler\n",
@@ -2032,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5a5982a2",
+   "id": "d1bacfa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,42 +2043,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "9b063a01",
+   "execution_count": 49,
+   "id": "a74f92c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 17532, 1: 4968})"
+       "Counter({1.0: 109334, 0.0: 109334})"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from collections import Counter\n",
-    "Counter(y_resampled)\n",
-    "Counter({0: 17532, 1: 4968})"
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "2e234681",
+   "execution_count": 50,
+   "id": "80d3a830",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[21622 14823]\n",
-      " [  466  2714]]\n",
-      "0.7233683304988736\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -2091,6 +2081,15 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[21622 14823]\n",
+      " [  466  2714]]\n",
+      "0.7233683304988736\n"
      ]
     }
    ],
@@ -2109,8 +2108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "835b998b",
+   "execution_count": 51,
+   "id": "6963fd53",
    "metadata": {},
    "outputs": [
     {
@@ -2135,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc679f3",
+   "id": "33465e1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2143,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d551f66b",
+   "id": "48982a24",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2151,14 +2150,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0997bfda",
+   "id": "fa7c913f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3dcabe5b",
+   "id": "89ef158a",
    "metadata": {},
    "source": [
     "# Linear Regression Model:\n",
@@ -2168,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3823449",
+   "id": "ea9f39f8",
    "metadata": {},
    "outputs": [],
    "source": []
