connection to ML model

--- a/Deliverable_1_input_data.ipynb
+++ b/Deliverable_1_input_data.ipynb
@@ -8,12 +8,13 @@
    "outputs": [],
    "source": [
     "# pip install psycopg2-binary in mlenv\n",
-    "# Create config.py file with postgres password as db_password"
+    "# Create config.py file with postgres password as db_password\n",
+    "# Create postgres database called COVID_Risk_Final_Project on POstgreSQL 13 server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6d0781d6",
    "metadata": {},
    "outputs": [],
