--- a/Postgres to ML Model Connection.ipynb
+++ b/Postgres to ML Model Connection.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8aa6fbf0",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "b1a4b0fc",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Python SQL toolkit and Object Relational Mapper\n",
@@ -12,26 +14,26 @@
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine\n",
-    "from config import db_password\n",
+    "from config import connection_string\n",
     "import pandas as pd\n",
     "import psycopg2 as pg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "94822bac",
+   "execution_count": 2,
+   "id": "76ee0c38",
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Create engine using the `demographics.sqlite` database file\n",
-    "engine = sqlalchemy.create_engine(f\"postgresql://postgres:{db_password}@127.0.0.1:5432/COVID_Risk_Final_Project\")"
+    " # Create engine using the database file\n",
+    "engine = sqlalchemy.create_engine(connection_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "bd473cbd",
+   "execution_count": 3,
+   "id": "4346eb1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "c2b7d136",
+   "execution_count": 4,
+   "id": "450784d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "bbce678b",
+   "execution_count": 5,
+   "id": "68bf6229",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbConnection = engine.connect();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0eca8bfa",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +74,7 @@
        "[]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,27 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "10c3b1dd",
+   "execution_count": null,
+   "id": "326ca8e1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "public",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sqlalchemy\\util\\_collections.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    185\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 186\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    187\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'public'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-862d974069b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Save references to each table\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcounties\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBase\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpublic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix_hospitals_index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sqlalchemy\\util\\_collections.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    186\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 188\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    189\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    190\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__contains__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: public"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save references to each table\n",
     "counties = Base.classes.counties\n",
@@ -102,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "00c31462",
+   "execution_count": null,
+   "id": "4b6082e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4976d3e8",
+   "id": "99544406",
    "metadata": {},
    "outputs": [],
    "source": []
