--- a/Postgres to ML Model Connection.ipynb
+++ b/Postgres to ML Model Connection.ipynb
@@ -2,36 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8aa6fbf0",
+   "execution_count": 1,
+   "id": "d67a2ad3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Before beginning this notebook you will need to add the following code to the query tool in pgAdmin: \n",
+    "# ALTER TABLE counties ADD PRIMARY KEY (fips_date); ALTER TABLE hospitals ADD PRIMARY KEY (fips_date);\n",
+    "# Additionally, you will need to enter your password into the connection_string variable in the config.py file. \n",
+    "# The place holder text is YOURPASSWORDHERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2653d2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python SQL toolkit and Object Relational Mapper\n",
+    "# Import dependencies\n",
     "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
-    "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine\n",
-    "from config import db_password\n",
+    "from config import connection_string\n",
     "import pandas as pd\n",
     "import psycopg2 as pg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "94822bac",
+   "execution_count": 2,
+   "id": "3f9b9b40",
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Create engine using the `demographics.sqlite` database file\n",
-    "engine = sqlalchemy.create_engine(f\"postgresql://postgres:{db_password}@127.0.0.1:5432/COVID_Risk_Final_Project\")"
+    " # Create engine using the database file\n",
+    "engine = sqlalchemy.create_engine(connection_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "bd473cbd",
+   "execution_count": 3,
+   "id": "408676a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "c2b7d136",
+   "execution_count": 4,
+   "id": "f3232228",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,71 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "bbce678b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Base.classes.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "10c3b1dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "public",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sqlalchemy\\util\\_collections.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    185\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 186\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    187\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'public'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-862d974069b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Save references to each table\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcounties\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBase\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpublic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix_hospitals_index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\mlenv\\lib\\site-packages\\sqlalchemy\\util\\_collections.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    186\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 188\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    189\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    190\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__contains__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: public"
-     ]
-    }
-   ],
-   "source": [
-    "# Save references to each table\n",
-    "counties = Base.classes.counties\n",
-    "hospitals = Base.classes.hospitals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "00c31462",
+   "execution_count": 5,
+   "id": "06bf0e77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = Session(engine)"
+    "dbConnection = engine.connect();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4976d3e8",
+   "id": "0759be27",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged_df = pd.read_sql(\"SELECT * FROM counties INNER JOIN hospitals ON counties.fips_date = hospitals.fips_date\", dbConnection);"
+   ]
   }
  ],
  "metadata": {
