working code to get joins

--- a/Group-3-main/Deliverable_1_input_data.ipynb
+++ b/Group-3-main/Deliverable_1_input_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6d0781d6",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "import time\n",
     "from sqlalchemy import create_engine\n",
     "from config import connection_string\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from config import dbConnection"
    ]
   },
   {
@@ -12481,7 +12482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_string = f\"postgresql://postgres:#Summer2021@127.0.0.1:5432/COVID_Risk_Analysis\""
+    "db_string = f\"postgresql://postgres:dbConnection@127.0.0.1:5432/COVID_Risk_Analysis\""
    ]
   },
   {
